--- a/page/styles.css
+++ b/page/styles.css
@@ -1,4 +1,4 @@
-/* Base Styles */
+
 
 * {
 	box-sizing: border-box;
@@ -12,7 +12,7 @@ h1 {
 
 body {
 	background-image: url("background.jpg");
-	background-color: #FEF5CA;
+	background-color: gray;
 
 }
 
@@ -52,7 +52,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFFF00;
+	background-color: pink;
 }
 
 #beef {
@@ -66,7 +66,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FF1439;
+	background-color: red;
 }
 
 #sushi {
@@ -79,7 +79,7 @@ section {
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
-	background-color: #6495ED;
+	background-color: yellow;
 	color: white;
 	padding: 5px;
 }
@@ -88,7 +88,7 @@ section {
 	width: 100%;
 }
 
-/* Desktop view */
+/* large devices*/
 
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
@@ -134,7 +134,7 @@ section {
 
 }
 
-/* Tablet view */
+/* medium devices */
 
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
@@ -179,7 +179,7 @@ section {
   }
 }
 
-/* Mobile view */
+/* small devices */
 
 @media (max-width: 768px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
